Exercises-part-2/exercise-2.09/manifests/client-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: sirpacoder/client:v2.08
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
