Exercises-part-2/exercise-2.09/manifests/server-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
  - name: server
    port: 6662
    protocol: TCP
    targetPort: 3001
